--- a/dbeaver.tex
+++ b/dbeaver.tex
@@ -1,4 +1,4 @@
-\chapter*{DBEAVER}
+\chapter{DBEAVER}
 DBeaver is un gestor de base de datos universal y profesional. Es capaz de manipular los datos, crear reportes analíticos basado en registros desde diferentes almacenes de base de datos, y exportar la información en un formato apropiado. 
 
 DBeaver ofrece:
