--- a/diagramaCasoUso.tex
+++ b/diagramaCasoUso.tex
@@ -1,12 +1,8 @@
 \chapter*{DIAGRAMA DE CASOS DE USO}
-
-\rowcolors{2}{gray!10}{gray!40}
-
-
-
+%\rowcolors{2}{gray!10}{gray!40}
 \begin{figure}[ht]
 	\centering
-	\includegraphics[scale=0.8]{images/casoUso2}
+	\includegraphics[scale=0.8]{images/casoUso1}
 	\caption{Diagrama de casos de uso}
 \end{figure}
 \begin{center}
@@ -30,3 +26,4 @@
     Post condición & Necesidad de información satisfecha \\
 \end{tabular}
 \end{center}
+
