--- a/idea.tex
+++ b/idea.tex
@@ -1,5 +1,5 @@
-\addcontentsline{toc}{chapter}{IntelliJ IDEA}
-\chapter*{IntelliJ IDEA}
+%\addcontentsline{toc}{chapter}{IntelliJ IDEA}
+\chapter{IntelliJ IDEA}
 \stepcounter{chapter}
 IntelliJ IDEA es un Entorno de desarrollo Integrado (EDI) o Integrated Development Environment (IDE) para lenguajes JVM\footnote{Java
     Kotlin
@@ -20,6 +20,8 @@ diseñado para maximizar la productividad del desarrollador. Hace la tareas ruti
 
 IntelliJ IDEA es multiplataforma, que provee una experiencia consistente en Windows, madOS, y Linux. 
 Soportea múltiples lenguajes, herramientas, frameworks, y tecnologías. 
+
+IntelliJ IDEA tiene soporte para Spring Boot, se puede crear seleccionando archivo/proyecto/Spring Initializr/siguiente. 
 
 IntelliJ IDEA viene en tres ediciones:
 \begin{itemize}
