--- a/java.tex
+++ b/java.tex
@@ -1,6 +1,6 @@
-\addcontentsline{to}{chapter}{}
-\chapter*{JAVA}
-\stepcounter{chapter}
+%\addcontentsline{to}{chapter}{}
+\chapter{JAVA}
+%\stepcounter{chapter}
 Fue desarrollado por el equipo liderado por James Gosling en Sun Microsystems. Sun microsystems fue comprado por Oracle en 2010. Originalmente llamado Oak, Java fue diseñado en 1991 para uso embebido de chips en electrodomésticos de consumo. En 1995, renombrado Java, fue re diseñado para desarrollo de aplicaciones Web. 
 
 Java se volvió enormemente popular. Fue descrito por sus diseñadores como \textit{ simple, orientado a objetos, distribuido, interpretado, robusto, seguro, neutral arquitecture, portable, de alto rendimiento, multiproceso y dinámico}.
