--- a/mysql.tex
+++ b/mysql.tex
@@ -1,5 +1,5 @@
-\addcontentsline{toc}{chapter}{}
-\chapter*{MySql/Mariadb}
+%\addcontentsline{toc}{chapter}{}
+\chapter{MySql/Mariadb}
 \stepcounter{chapter}
 MariaDB es una bifurcación de MySQL impulsada por la comunidad que Monty inició en 2009 Widenius, el autor original de MySQL, después de que Oracle adquiriera el antiguo proyecto.
 La primera versión de MariaDB se basó en MySQL 5.1 y las mejoras a El código base de MySQL se fusiona regularmente en el proyecto MariaDB. Otras características
