--- a/requerimiento.tex
+++ b/requerimiento.tex
@@ -1,5 +1,5 @@
-\chapter*{LISTA DE REQUERIMIENTOS}
-\subsection*{REQUERIMIENTOS FUNCIONALES}
+\chapter{LISTA DE REQUERIMIENTOS}
+\section{REQUERIMIENTOS FUNCIONALES}
 \begin{enumerate}
 	\item \textbf{Es accesible via navegador web}
 	\item \textbf{permite busqueda por texto a algún campo: }Por ejemplo por palabra clave clave.
@@ -14,11 +14,11 @@
 	\item Que puede manejar  de forma automática  la duplicidad de documentos
 \end{enumerate}
 
-\subsection*{REQUERIMIENTOS NO FUNCIONALES}
+\section{REQUERIMIENTOS NO FUNCIONALES}
 \begin{enumerate}
 	\item Debe sorporta multiples descargas al menos hata 20 simultaneamente. 
 	\item La seguridad no debe ser tomado en cuenta, puede copiar o clonar el sitema cualquiera que desee si se desea trabajar de forma local. 
 	\item Si se accede a la biblioteca por el navegador, el usuario debe estar suscrito. 
 	\item Debe ser adaptable a cualquier contenido digital
 \end{enumerate}
-\section*{ESCALABILIDAD} El software debe ser escalable para contener cualquier objeto digital y adecuarse al volumen de almacenamiento.
+\section{ESCALABILIDAD} El software debe ser escalable para contener cualquier objeto digital y adecuarse al volumen de almacenamiento.
