--- a/swagger.tex
+++ b/swagger.tex
@@ -1,4 +1,4 @@
-\chapter*{SWAGGER}
+\chapter{SWAGGER}
 Es un conjunto de herramientas para desarrolladores API (aplication program interface) proveido por la compañía de tecnología \textit{SmartBear Software}. 
 
 Fue creado en 2011 por Tony Tam por necesidad
