--- a/tecnologia.tex
+++ b/tecnologia.tex
@@ -7,4 +7,4 @@ Para la implementación se utiliza las siguientes tecnología:
 \item \textbf{Framework}, Spring Boot
 \item \textbf{IDE}, GetBrain IDEA
 \end{itemize}
-Se expone continuación éstas tecnologías:
+Además de otros se expone continuación éstas tecnologías:
