Se actualiza con descripcion de tecnologias

--- a/BIBLIOTECA.tex
+++ b/BIBLIOTECA.tex
@@ -87,6 +87,7 @@
 
 
 \part{Analisis del sistema} %--------------------------Analisis
+\include{analisis}
 \include{diagramaProceso}
 \include{diagramaCasoUso}
 
