--- a/analisis.tex
+++ b/analisis.tex
@@ -1,2 +1,6 @@
-\chapter*{ANÁLISIS DE SISTEMA}
+\chapter{Análisis de sitema}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.7]{images/entidadRelacion}
+\end{figure}
 
