--- a/apiRest.tex
+++ b/apiRest.tex
@@ -4,7 +4,7 @@
 \centering
 \begin{tabular}{|lp{10cm}|} \hline
 Metodo http & GET \\%, POST, PUT y DELETE
-url   &  \url{http://api.biblioteca-digital-2295.org/libros}\\
+url   &  \url{http://kuerva:2295/org/biblioteca2295/almacen}\\
 Descripción & Es servicio lista todos los libros de la biblioteca digital 2295.\\ \hline
 \end{tabular}
 \end{table}
