Segunda vez la clas corregida

--- a/diagramaClase.tex
+++ b/diagramaClase.tex
@@ -1,6 +1,6 @@
 \chapter*{DIAGRAMA DE CLASES}
 \begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.8]{images/clase2}
+	\includegraphics[scale=0.6]{images/clase}
 	\caption{Diagrama de clases }
 \end{figure}
