--- a/requerimiento.tex
+++ b/requerimiento.tex
@@ -2,13 +2,13 @@
 \section{REQUERIMIENTOS FUNCIONALES}
 \begin{enumerate}
 	\item \textbf{Es accesible via navegador web}
-	\item \textbf{permite busqueda por texto a algún campo: }Por ejemplo por palabra clave clave.
+	\item \textbf{permite busqueda por texto a algún campo: }Por ejemplo por palabra clave clave de articulos.
 	\item \textbf{Busqueda flexible:} El usuario puede buscar por título, autor, fechas, ectructuras de clasificación, etc. 
 	\item \textbf{Hace uso de la metadata disponible: } Para incorporar nuevo material a la biblioteca. 
 	\item \textbf{Maneja otro tipo de objetos digitales: } Por ejemplo video, imágens, audio, IDEs, páginas web es dicir links.
 	\item Todo lo que ves lo puedes obtener.
-	\item El sistema puede funcionar en linea así también de forma local y que el estudiante pueda añadir facilmente nuevo material a su biblioteca digital. 
-	\item El estudiante pueda conectarse de forma remota con su biblioteca digital de cualquier lugar por internet y así tambien por la red local. 
+	\item El sistema puede funcionar en linea así también de forma local y que el estudiante pueda añadir fácilmente nuevo material a su biblioteca digital. 
+	\item El estudiante pueda conectarse de forma remota con su biblioteca digital de cualquier lugar por internet y así también por la red local. 
 	\item Debe tener una versión de escritorio para S.O. comunes como Linux/GNU, Window y Mac. 
 	\item Que permita clonar todo el sistema y su contenido de forma fácil a un dispositivo de almacenamiento masivo si se desea utilizarlo de forma local (sin internet)
 	\item Que puede manejar  de forma automática  la duplicidad de documentos
