de yoga Agregado Arquitectura

--- a/BIBLIOTECA.tex
+++ b/BIBLIOTECA.tex
@@ -95,8 +95,11 @@
 \part{Diseño}
 \include{diagramaClase}
 \include{diagramaSecuencia}
-\include{disenoDB}
+\include{arquitectura}
 \include{disenoFormularioReporte}
+\include{otraSalida}
+\include{disenoDB}
+
 %------------------------------------IMPLEMENTACION
 \part{Implementación}% aqui  paradigam: Microser nosotros API rest
 \include{tecnologia}
@@ -123,6 +126,7 @@
 %\include{glosario}
 \bibliographystyle{apalike}
 \bibliography{ref}
+
 
 
 \end{document}
